# NAO-GPT_BA

./: .gitignore  Nao_startup.sh  copy_past
nao_poser/: package.xml  setup.cfg  setup.py
nao_poser/config/: poses.json
nao_poser/nao_poser/: nao_poser.py
parser/: package.xml  setup.cfg  setup.py
parser/parser/: parser_node.py
ros_gpt/: package.xml  setup.py
ros_gpt/config/: job_description.txt  pose_description.json  wron_poses.json
ros_gpt/ros_gpt/: gpt_interface.py  job_description.txt  pose_description.json  ros_gpt.py
ros_stt/: package.xml  setup.cfg  setup.py
ros_stt/ros_stt/: ros_stt.py  stt_azure_interface.py  stt_presampler.py
temp_storage/: test1.csv  test10.csv  test11.csv  test12.csv  test13.csv  test14.csv  test15.csv  test16.csv  test17.csv  test18.csv  test19.csv  test2.csv  test20.csv  test21.csv  test22.csv  test23.csv  test24.csv  test25.csv  test26.csv  test27.csv  test28.csv  test29.csv  test3.csv  test30.csv  test31.csv  test32.csv  test33.csv  test34.csv  test35.csv  test36.csv  test37.csv  test38.csv  test39.csv  test4.csv  test40.csv  test41.csv  test42.csv  test43.csv  test44.csv  test45.csv  (+32 more)
topic_logger/: package.xml  setup.cfg  setup.py
topic_logger/topic_logger/: logger.py
touch_node/: package.xml  setup.cfg  setup.py
touch_node/touch_node/: touch_node.py
