<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nao_poser</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nao@todo.todo">nao</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>naoqi_bridge_msgs</exec_depend>
  <exec_depend>json</exec_depend>
  <exec_depend>os</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <install> include="${prefix}/config"</install>
  </export>
</package>
